Fixed spacing on all action clips

--- a/css/all-clips.css
+++ b/css/all-clips.css
@@ -285,7 +285,7 @@ a user's name and picture, content and preview or a group and it's profile pictu
 }
 
 .oae-clip-action h1 {
-  margin: 5px 0 5px 0;
+  margin: 5px 0 5px 7px;
   padding: 10px 10px 0 10px; 
 }
 
